fixed some html

--- a/templates/html/dashboard.html
+++ b/templates/html/dashboard.html
@@ -69,7 +69,7 @@
     <!-- Footer -->
     <div id="footer">
       {% block footer %}
-        <i> Adam Mischke's browser @ dick aaa </i>
+        <i> Adam Mischke's browser @ Homedash </i>
       {% endblock %}
     </div>
   </body>
